// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionVotes should render loading state 1`] = `
<div>
  <div
    class="flex items-center justify-between py-6 border-t border-dashed border-theme-neutral-300"
    data-testid="TransactionVotes__skeleton"
  >
    <div
      class="flex flex-col space-y-2"
    >
      <span>
        <span
          class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style="width: 25%; height: 14px;"
        >
          ‌
        </span>
      </span>
      <span>
        <span
          class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
          style="width: 75%; height: 16px;"
        >
          ‌
        </span>
      </span>
    </div>
    <span>
      <span
        class="react-loading-skeleton mb-1 css-1vmnjpn-skeletonStyles-Skeleton"
        style="width: 44px; height: 44px; border-radius: 50%;"
      >
        ‌
      </span>
    </span>
  </div>
</div>
`;

exports[`TransactionVotes should render with unvotes 1`] = `
<div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Transaction Type
      </div>
      <div
        class="font-semibold"
      >
        Unvote
      </div>
    </div>
    <div
      class="sc-AxjAm bHAIY border-theme-text"
    >
      <div
        class="sc-AxirZ dqZknP"
        height="21"
        width="21"
      >
        <svg>
          unvote.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Unvotes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
          >
            <div
              class="py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  test-username
                </span>
                <span
                  class="sc-AxgMl fFPQpl text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionVotes should render with votes 1`] = `
<div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Transaction Type
      </div>
      <div
        class="font-semibold"
      >
        Vote
      </div>
    </div>
    <div
      class="sc-AxjAm bHAIY border-theme-text"
    >
      <div
        class="sc-AxirZ dqZknP"
        height="21"
        width="21"
      >
        <svg>
          vote.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Votes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
          >
            <div
              class="py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  test-username
                </span>
                <span
                  class="sc-AxgMl fFPQpl text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionVotes should render with votes and unvotes 1`] = `
<div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Transaction Type
      </div>
      <div
        class="font-semibold"
      >
        Vote / Unvote
      </div>
    </div>
    <div
      class="sc-AxjAm bHAIY border-theme-text"
    >
      <div
        class="sc-AxirZ dqZknP"
        height="21"
        width="21"
      >
        <svg>
          vote-unvote.svg
        </svg>
      </div>
    </div>
  </div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Votes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
          >
            <div
              class="py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  test-username
                </span>
                <span
                  class="sc-AxgMl fFPQpl text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxhCb duqBKZ"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-neutral"
      >
        Unvotes (1)
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="-my-2"
        >
          <div
            class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
          >
            <div
              class="py-4 space-x-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="test-address"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(3, 169, 244)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"35\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                    title="test-address"
                  />
                </div>
              </div>
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                  data-testid="address__wallet-name"
                >
                  test-username
                </span>
                <span
                  class="sc-AxgMl fFPQpl text-theme-neutral-light font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  test-address
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
